--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,3 +31,17 @@ jobs:
         pip3 install flake8 black
     - name: Lint Python
       run: python3 -m flake8 canonicalwebteam && python3 -m black --line-length 79 --check canonicalwebteam
+      
+  check-inclusive-naming:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Check inclusive naming
+        uses: canonical-web-and-design/inclusive-naming@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-review
+          fail-on-error: true
